postgresql-common (162) UNRELEASED; urgency=medium

  [ Christoph Berg ]
  * t/020_create_sql_remove.t: Test psql -tx alignment to catch a bug in
    9.4beta2.

  [ Peter Michael Green ]
  * Use ID_LIKE to identify deriviatives of Debian and Ubuntu.
    (Closes: #761020)

  [ Richard Hughes ]
  * Use Type=forking in postgresql@.service and start before postgresql.
    (Closes: #759725)

 -- Christoph Berg <myon@debian.org>  Sun, 07 Sep 2014 13:42:56 +0200

postgresql-common (161) unstable; urgency=medium

  * pg_ctlcluster: Refuse root operation when config owner does not match
    data owner, and config owner is not root.
  * Stop automatically updating debian/control from debian/control.in in
    pgxs_debian_control.mk. Instead, implement "checkcontrol" and
    "updatecontrol" actions in pg_buildext. checkcontrol is run from
    pgxs_debian_control.mk and will warn if an update is required.
    Backport and pgdg builds will still automatically update.
    (Closes: #758570)
  * pg_virtualenv, testsuite: Use "ip" to start lo when available.
  * Add iproute2 | net-tools to postgresql-server-dev-all dependencies.
  * Debconf translation updates, thanks!
    + it by Luca Monducci. (Closes: #759808)

 -- Christoph Berg <myon@debian.org>  Fri, 15 Aug 2014 10:13:51 +0200

postgresql-common (160) unstable; urgency=medium

  [ Martin Pitt ]
  * supported-versions: Set 9.4 as default for Ubuntu 14.10.
  * debian/maintscripts-functions: Call update-alternatives under C locale to
    fix parsing for non-English locales. (LP: #1293596)
  * pg_createcluster: Fix test if specified owner/group ID is numeric. Thanks
    Sven Berkvens-Matthijsse! (LP: #1329227)

  [ Christoph Berg ]
  * Use dh-systemd to enable postgresql.service on install. (Closes: #757612)
  * Set Multi-Arch: foreign in postgresql-common, postgresql-client-common,
    postgresql-client, and postgresql-doc, and document this in
    doc/dependencies.{dia,png}. (Closes: #757520)