@@ -20,7 +20,6 @@
 
 use strict;
 use warnings;
-use lib '/usr/share/postgresql-common';
 use Getopt::Long;
 use POSIX qw/setsid dup2 setlocale LC_ALL :sys_wait_h/;
 use PgCommon;
