@@ -17,8 +17,6 @@
 #  GNU General Public License for more details.
 
 use strict;
-
-use lib '/usr/share/postgresql-common';
 use PgCommon;
 use Getopt::Long;
 use POSIX;
