@@ -17,10 +17,7 @@
 #  GNU General Public License for more details.
 
 use strict;
-
 use POSIX;
-
-use lib '/usr/share/postgresql-common';
 use PgCommon;
 
 my ($version, $cluster, $db, $port, $host);
