@@ -5,8 +5,6 @@ use strict;
 use lib 't';
 use TestLib;
 use Socket;
-
-use lib '/usr/share/postgresql-common';
 use PgCommon;
 
 use Test::More tests => 127;
