@@ -8,8 +8,6 @@ use TestLib;
 my @versions = ($MAJORS[-1]);
 
 use Test::More tests => 29;
-
-use lib '/usr/share/postgresql-common';
 use PgCommon;
 
 my $shellaction = '#!/bin/sh
