@@ -9,8 +9,6 @@ use File::Temp qw/tempdir/;
 my $version = $MAJORS[-1];
 
 use Test::More tests => 34;
-
-use lib '/usr/share/postgresql-common';
 use PgCommon;
 
 delete $ENV{'LANG'};
