@@ -17,15 +17,13 @@ package TestLib;
 use strict;
 use Exporter;
 use Test::More;
+use PgCommon qw/get_versions change_ugid/;
 
 our $VERSION = 1.00;
 our @ISA = ('Exporter');
 our @EXPORT = qw/ps ok_dir exec_as deb_installed rpm_installed package_version
     version_ge is_program_out like_program_out unlike_program_out pidof pid_env check_clean
     @ALL_MAJORS @MAJORS $delay/;
-
-use lib '/usr/share/postgresql-common';
-use PgCommon qw/get_versions change_ugid/;
 
 our @ALL_MAJORS = sort (get_versions()); # not affected by PG_VERSIONS/-v
 our @MAJORS = $ENV{PG_VERSIONS} ? split (/\s+/, $ENV{PG_VERSIONS}) : @ALL_MAJORS;
